<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	 xmlns:android="http://schemas.android.com/apk/res/android"
	 android:title="@string/settings_title">
	
	<ListPreference
		 android:defaultValue="@string/settings_min_star_rating_default"
		 android:entries="@array/settings_min_star_rating_labels"
		 android:entryValues="@array/settings_min_star_rating_values"
		 android:key="@string/settings_min_star_rating_key"
		 android:title="@string/settings_min_star_rating_label"/>
	
	<ListPreference
		 android:defaultValue="@string/settings_news_language_default"
		 android:entries="@array/settings_news_language_labels"
		 android:entryValues="@array/settings_news_language_values"
		 android:key="@string/settings_news_language_key"
		 android:title="@string/settings_news_language_label"/>
	
	<ListPreference
		 android:defaultValue="@string/settings_news_sections_default"
		 android:entries="@array/settings_news_sections_labels"
		 android:entryValues="@array/settings_news_sections_values"
		 android:key="@string/settings_news_sections_key"
		 android:title="@string/settings_news_sections_label"/>

</PreferenceScreen>